# rebate-form-generator

./: .gitignore  README.md  RebateFormGenerator.spec  build_exe.bat  pyproject.toml
data/supplier info/: Contract Source info.xlsx
data/template/: Rebate Agreement Update Form_5.08.25 updated0205.docx
src/rebate_form_generator/: main.py
src/rebate_form_generator/config/: settings.py
src/rebate_form_generator/consolidation/: pipeline.py  stage1_ingest.py  stage2_segment.py  stage3_all.py  stage4_rebate.py  stage5_template.py  stage6_rebate_form.py  stage7_report.py
src/rebate_form_generator/ui/: main_window.py
